--- a/src/css/input.css
+++ b/src/css/input.css
@@ -33,3 +33,8 @@ input[type=number] {
     opacity: 0 !important;
     transform: translateY(-20px) !important;
   }
+
+  /* CSS pour changer la couleur du stroke au survol */
+.group:hover .svg-stroke {
+    stroke: #FF7D1A; /* Couleur orange au survol */
+}
